--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -1,13 +1,7 @@
 .about-me {
-    margin: 0 auto;
     padding: 0;
     margin-bottom: 60px;
     margin-top: 60px;
-}
-
-.about-me>.container {
-    margin: 0 auto;
-    padding: 0 16px;
 }
 
 .hidden {
@@ -21,7 +15,6 @@
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
-
 }
 
 .about-me-discr {
@@ -35,16 +28,10 @@
 
 .discr-card {
     border-radius: 24px;
-    width: 343px;
+    max-width: 343px;
+    min-width: 288px;
     height: 500px;
-    background: #3B3B3B;
-
-    /*
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-    max-width: 54px;
-     */
+    background: #242527;
 }
 
 .discr-text {
@@ -56,7 +43,7 @@
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: #FAFAFA;
-    width: 279px;
+    max-width: 279px;
     height: auto;
     margin-top: 32px;
     margin-left: 32px;
@@ -81,7 +68,7 @@
 
 .accordion {
     margin-top: 12px;
-    width: 343px;
+    max-width: 343px;
     height: auto;
     list-style: none;
     padding: 0;
@@ -123,7 +110,7 @@
     align-items: center;
     width: 100%;
 }
-.svg-right-div {
+.about-svg-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -132,25 +119,32 @@
     padding: 9px;
     width: 36px;
     height: 36px;
+    fill: #FAFAFA;
     margin-left: 23px;
     background-color: transparent;
 }
-.icon-sec {
+
+.about-icon {
     display: none;
 }
-.icon-up {
+
+.about-icon-up {
     display: block;
 }
-.accordion-header[aria-expanded="true"] .icon-up {
+
+.accordion-header[aria-expanded="true"] .about-icon-up {
     display: block;
 }
-.accordion-header[aria-expanded="true"] .icon-down {
+
+.accordion-header[aria-expanded="true"] .about-icon-down {
     display: none;
 }
-.accordion-header[aria-expanded="false"] .icon-up {
+
+.accordion-header[aria-expanded="false"] .about-icon-up {
     display: none;
 }
-.accordion-header[aria-expanded="false"] .icon-down {
+
+.accordion-header[aria-expanded="false"] .about-icon-down {
     display: block;
 }
 
@@ -211,20 +205,103 @@ display: flex;
     background-color: #ED3B44;
 }
 
+.about-side-icon{}
 
+.icon-right{}
 
 
 
 @media screen and (min-width: 768px) {
     .about-me {
-        margin-top: 80px;
-        margin-bottom: 80px;
+        margin-top: 64px;
+        margin-bottom: 64px;
     }
 
     .about-me>.container {
         padding: 0 32px;
     }
 
+                .about-me-discr {
+                     margin-bottom: 12px;
+    }
+    
+    .discr-card {
+        max-width: 704px;
+        height: 700px;
+    }
+    
+    .discr-text {
+        font-size: 38px;
+        line-height: 105%;
+        max-width: 576px;
+        margin-top: 64px;
+        margin-left: 64px;
+        margin-right: 64px;
+    }
+    
+    .discr-img {
+        max-width: 704px;
+        min-width: 704px;
+    }
+    
+    .accordion {
+        margin-top: 12px;
+        max-width: 704px;
+    }
+    
+     .accordion-header {
+        padding-top: 20px;
+        padding-bottom: 12px;
+    }
+    
+    .accordion-content {
+        padding-top: 12px;
+        padding-bottom: 20px;
+    
+    }
+
+    .accordion-about-text {
+        margin-top: 16px;
+     }
+    
+        .accordion-role-list {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-direction: column;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+    
+    
+        .skills-list {
+            display: flex;
+            align-items: flex-start;
+            justify-content: flex-start;
+            flex-direction: row;
+            gap: 0px;
+            margin-top: 32px;
+            margin-bottom: 20px;
+        }
+    
+        .skills-list-items {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 1px solid rgba(250, 250, 250, 0.2);
+            border-radius: 50%;
+            width: 130px;
+            height: 130px;
+            background-color: transparent;
+        }
+    
+        .skills-list-items.chosen {
+            background-color: #ED3B44;
+        }
+    
+        .about-side-icon {}
+    
+        .icon-right {}
 
 }
 
