--- a/src/css/about-me.css
+++ b/src/css/about-me.css
@@ -35,9 +35,6 @@
 }
 
 .discr-text {
-    font-family: "Inter Tight",
-        sans-serif;;
-    font-weight: 500;
     font-size: 24px;
     line-height: 117%;
     letter-spacing: -0.03em;
@@ -89,8 +86,6 @@
 }
 
 .accordion-title {
-    font-family: "Inter Tight",
-        sans-serif;;
     font-weight: 600;
     font-size: 16px;
     line-height: 150%;
@@ -149,9 +144,6 @@
 }
 
 .accordion-content {
-    font-family: "Inter Tight",
-        sans-serif;;
-    font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: -0.02em;
@@ -181,10 +173,16 @@ display: flex;
 
 
 .skills-list {
+    font-size: 16px;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
+
+
+    flex-direction: column;
+    /*
     flex-direction: row;
+    */
     gap: 0px;
     margin-top: 32px;
     margin-bottom: 20px;
@@ -203,6 +201,17 @@ display: flex;
 
 .skills-list-items.chosen {
     background-color: #ED3B44;
+}
+
+.about-svg-side-icon{
+        display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 40px;
+            height: 40px;
+            fill: #FAFAFA;
+            margin-left: 64px;
+            background-color: transparent;
 }
 
 .about-side-icon{}
@@ -264,39 +273,10 @@ display: flex;
         margin-top: 16px;
      }
     
-        .accordion-role-list {
-            display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
-            flex-direction: column;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-    
-    
-        .skills-list {
-            display: flex;
-            align-items: flex-start;
-            justify-content: flex-start;
-            flex-direction: row;
-            gap: 0px;
-            margin-top: 32px;
-            margin-bottom: 20px;
-        }
-    
         .skills-list-items {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border: 1px solid rgba(250, 250, 250, 0.2);
-            border-radius: 50%;
-            width: 130px;
-            height: 130px;
-            background-color: transparent;
-        }
-    
-        .skills-list-items.chosen {
-            background-color: #ED3B44;
+            font-size: 20px;
+            width: 200px;
+            height: 200px;
         }
     
         .about-side-icon {}
