--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -12,19 +12,18 @@
             </div>
             <div class="discr-card">
                 <picture>
-                    <source srcset="
-                                                        ../img/about_me_desk.png    1x,
-                                                        ../img/about_me_desk@2x.png 2x
+                    <source srcset="/superiore/assets/img/about_me_desk.png    1x,
+                                    /superiore/assets/img/about_me_desk@2x.png 2x
                                                       " media="(min-width: 1158px)" />
                     <source srcset="
-                                                        ../img/about_me_tab.png    1x,
-                                                        ../img/about_me_tab@2x.png 2x
+                                    /superiore/assets/img/about_me_tab.png    1x,
+                                    /superiore/assets/img/about_me_tab@2x.png 2x
                                                       " media="(min-width: 768px)" />
                     <source srcset="
-                                                        ../img/about_me_mob.png 1x, 
-                                                        ../img/about_me_mob@2.png 2x
+                                    /superiore/assets/img/about_me_mob.png 1x, 
+                                    /superiore/assets/img/about_me_mob@2.png 2x
                                                       " media="(max-width: 767px)" />
-                    <img loading="lazy" src="../img/about_me_mob.png" alt="men" class="discr-img" />
+                    <img loading="lazy" src="../img/about_me_mob.jpg" alt="men" class="discr-img" />
                 </picture>
             </div>
 
@@ -109,7 +108,7 @@
                 </li>
             </ul>
         </div>
-        <div>
+        <div class="accordion-toggle">
             <ul class="skills-list">
                 <li class="skills-list-items chosen">HTML/CSS</li>
                 <li class="skills-list-items">JavaScript</li>
@@ -118,12 +117,13 @@
                 <li class="skills-list-items">React Native</li>
                 <li class="skills-list-items">Soft skills</li>
             </ul>
-            <!--
-                <button class="accordion-toggle" >
-                    <img src="path-to-side-icon.svg" alt="Expand" class="about-side-icon icon-right" />
-                </button> 
-                -->
-
+                <button class="accordion-toggle">
+                    <div class="about-svg-side-icon">
+                        <svg class="about-side-icon icon-right" width="40" height="40">
+                            <use href="/img/sprite.svg#icon-arrow-narrow-right"></use>
+                        </svg>
+                    </div>
+                </button>
         </div>
 
     </div>
