--- a/src/css/base.css
+++ b/src/css/base.css
@@ -67,3 +67,17 @@ body {
   letter-spacing: -0.02em;
   background-color: #1c1d20;
 }
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
