--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,5 +1,6 @@
 <section id="covers">
     <div class="container">
+        <h2 class="visually-hidden">Covers</h2>
         <ul class="projects-list">
             <li>
                 <img
