--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -2,6 +2,8 @@
     padding: 0;
     list-style: none;
     margin: 0 auto;
+    width: 100%;
+    max-width: 343px;
 }
 
 .fag-h1 {
@@ -12,6 +14,7 @@
     color: rgba(250, 250, 250, 0.4);
     width: 284px;
     margin-bottom: 32px;
+    width: 100%;
 }
 
 .fag-li {
@@ -20,6 +23,7 @@
     width: 343px;
     border-top: 1px solid rgba(250, 250, 250, 0.2);
     border-bottom: 1px solid rgba(250, 250, 250, 0.2);
+    width: 100%;
 }
 
 .accordion-header {
@@ -63,7 +67,7 @@
     cursor: pointer;
     fill: transparent;
     stroke: white;
-    margin-left: 44px;
+    margin-left: 20px;
 }
 
 .icon-up {
@@ -106,5 +110,68 @@
         width: 40px;
         height: 40px;
         margin-left: 8px;
+    }
+}
+
+
+@media only screen and (min-width: 1440px) {
+    .fag-ul {
+        width: 1376px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        justify-content: center;
+        align-items: stretch;
+    }
+
+    .fag-li {
+        width: 688px;
+    }
+
+    .accordion-body {
+        width: 656px;
+    }
+
+    .fag-li:nth-child(1) {
+        order: 1;
+    }
+
+    .fag-li:nth-child(2) {
+        order: 3;
+    }
+
+    .fag-li:nth-child(3) {
+        order: 5;
+    }
+
+    .fag-li:nth-child(4) {
+        order: 2;
+    }
+
+    .fag-li:nth-child(5) {
+        order: 4;
+    }
+
+    .fag-li:nth-child(6) {
+        order: 6;
+    }
+
+    .right-left {
+        border-right: 1px solid rgba(250, 250, 250, 0.2);
+    }
+
+    .right-left-svg {
+        margin-right: 32px;
+    }
+
+    .right-elements {
+        padding-left: 32px;
+    }
+
+    .last-element-margin {
+        margin-left: 131px;
+    }
+
+    .accordion-body {
+        padding-bottom: 26px;
     }
 }
