--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,10 +1,10 @@
 <section id="faq">
     <div class="container">
-        <h1 class="fag-h1">FAQ</h1>
+        <h4 class="fag-h1">FAQ</h4>
         <ul class="accordion fag-ul">
-            <li class="accordion__item fag-li right-border accordion">
+            <li class="accordion__item fag-li right-border ac right-left">
                 <button class="accordion-header">What programming languages are most often used in your project?
-                    <div class="icon-div">
+                    <div class="icon-div right-left-svg">
                         <svg class="icon-sec icon-up" width="20" height="20">
                             <use href="/img/sprite.svg#icon-arrow-down"></use>
                         </svg>
@@ -18,9 +18,9 @@
                     combination of frontend (client side) and backend (server side) languages.
                 </div>
             </li>
-            <li class="accordion__item fag-li right-border accordion">
+            <li class="accordion__item fag-li right-border ac right-left">
                 <button class="accordion-header">What are the deadlines for the project?
-                    <div class="icon-div">
+                    <div class="icon-div right-left-svg">
                         <svg class="icon-sec icon-up" width="20" height="20">
                             <use href="/img/sprite.svg#icon-arrow-down"></use>
                         </svg>
@@ -37,9 +37,9 @@
                     occurs during the planning phase of the project.
                 </div>
             </li>
-            <li class="accordion__item fag-li right-border accordion">
+            <li class="accordion__item fag-li right-border ac right-left">
                 <button class="accordion-header">What payment methods do you accept?
-                    <div class="icon-div">
+                    <div class="icon-div right-left-svg">
                         <svg class="icon-sec icon-up" width="20" height="20">
                             <use href="/img/sprite.svg#icon-arrow-down"></use>
                         </svg>
@@ -53,7 +53,7 @@
                     as well as payments in cryptocurrencies such as Bitcoin, Ethereum and others.
                 </div>
             </li>
-            <li class="accordion__item fag-li right-border accordion">
+            <li class="accordion__item fag-li right-border ac right-elements">
                 <button class="accordion-header">How can I contact you?
                     <div class="icon-div">
                         <svg class="icon-sec icon-up" width="20" height="20">
@@ -69,7 +69,7 @@
                     combination of frontend (client side) and backend (server side) languages.
                 </div>
             </li>
-            <li class="accordion__item fag-li right-border accordion">
+            <li class="accordion__item fag-li right-border ac right-elements">
                 <button class="accordion-header">Do you provide advice or support?
                     <div class="icon-div">
                         <svg class="icon-sec icon-up" width="20" height="20">
@@ -88,11 +88,11 @@
                     occurs during the planning phase of the project.
                 </div>
             </li>
-            <li class="accordion__item fag-li right-border accordion">
+            <li class="accordion__item fag-li right-border ac right-elements">
                 <button class="accordion-header">What does the process of developing a software product look like from
                     idea
                     to implementation?
-                    <div class="icon-div">
+                    <div class="icon-div last-element-margin">
                         <svg class="icon-sec icon-up" width="20" height="20">
                             <use href="/img/sprite.svg#icon-arrow-down"></use>
                         </svg>
