--- a/src/partials/about-me.html
+++ b/src/partials/about-me.html
@@ -14,28 +14,28 @@
                 <picture>
                     <source
                         srcset="
-                            /superiore/assets/img/about_me_desk.png    1x,
-                            /superiore/assets/img/about_me_desk@2x.png 2x
+                            /img/about_me_desk.png    1x,
+                            /img/about_me_desk@2x.png 2x
                         "
                         media="(min-width: 1158px)"
                     />
                     <source
                         srcset="
-                            /superiore/assets/img/about_me_tab.png    1x,
-                            /superiore/assets/img/about_me_tab@2x.png 2x
+                            /img/about_me_tab.png    1x,
+                            /img/about_me_tab@2x.png 2x
                         "
                         media="(min-width: 768px)"
                     />
                     <source
                         srcset="
-                            /superiore/assets/img/about_me_mob.png   1x,
-                            /superiore/assets/img/about_me_mob@2.png 2x
+                            /img/about_me_mob.png   1x,
+                            /img/about_me_mob@2.png 2x
                         "
                         media="(max-width: 767px)"
                     />
                     <img
                         loading="lazy"
-                        src="../img/about_me_mob.jpg"
+                        src="/img/about_me_mob.jpg"
                         alt="men"
                         class="discr-img"
                     />
